<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background"
    android:gravity="center|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="20px"
            android:text="@string/empty" />
    </LinearLayout> 	
 	<LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

		<ImageView
            android:id="@+id/button_back"
            android:layout_width="140px"
            android:layout_height="80px"
            android:maxHeight="45px"
            android:minHeight="40px"
            android:src="@drawable/button_back" />
		
        <TextView
            android:id="@+id/textView3"
            android:layout_width="20px"
            android:layout_height="wrap_content"
            android:maxWidth="20px"
            android:minWidth="10px"
            android:text="@string/empty" />

        <ImageView
            android:id="@+id/button_home"
            android:layout_width="140px"
            android:layout_height="match_parent"
            android:src="@drawable/button_home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="20px"
            android:text="@string/empty" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="312px"
        android:layout_height="312px"
        android:background="@drawable/d_pad_bg"
        android:gravity="center_vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <Button
                android:id="@+id/button_up"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/button_top" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button_left"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/button_left" />

            <Button
                android:id="@+id/button_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_ok" />

            <Button
                android:id="@+id/button_right"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/button_right" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

            <Button
                android:id="@+id/button_down"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/button_bottom" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.35" >

        <Button
            android:id="@+id/button_reverse"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.05"
            android:text="@string/button_reverse" />

        <Button
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/button_play" />

        <Button
            android:id="@+id/button_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/button_forward" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_replay" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_info" />

    </LinearLayout>

</LinearLayout>